# Autonomous-Driving-Team-Project-25SS

./: .gitignore  README.md  readme.md
src/: setup_script.sh
src/dummy_controller/: CMakeLists.txt  package.xml
src/dummy_controller/src/: dummy_controller_node.cpp  dummy_controller_node.cpp:Zone.Identifier  vehicle_state_publisher.cpp
src/path_planner/: CMakeLists.txt  car_positions.txt  package.xml
src/path_planner/launch/: path_planner.launch
src/path_planner/src/: path_planner_node.cpp  pose_recorder.cpp  short_term_planner.cpp
src/simulation/: CMakeLists.txt
src/simulation/launch/: simulation_demo.launch
src/simulation/msg/: TrafficLight.msg
src/simulation/rviz/: visualization.rviz
src/simulation/src/: traffic_light_recognition.cpp
src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/StreamingAssets/: simulation_config.json
src/trajectory_generator/: CMakeLists.txt  How_to_run.md  ReadMe_EN.md  ReadMe_Zh_CN.md  package.xml  readme.md
src/trajectory_generator/src/: trajectory_node.cpp  trajectory_node_v2.cpp
