<?xml version="1.0"?>
<package format="2">
  <name>dummy_controller</name>
  <version>0.0.6657</version>
  <description>The dummy_controller package</description>

  <maintainer email="jiaming.zhang@tum.de">Jiaming zhang</maintainer>
  <license>TODO</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>simulation</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend> 

  <!-- 导出依赖 -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>simulation</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend> 
  <!-- 运行依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>simulation</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> 
  
  <export>
  </export>
</package>

